fix: fix home page hero padding on mobile

--- a/src/app/(home)/Home.scss
+++ b/src/app/(home)/Home.scss
@@ -2,11 +2,15 @@
   .hero {
     position: relative;
     display: flex;
-    height: 600px;
     flex-direction: column;
     justify-content: center;
 
+    @media (min-width: 350px) {
+      height: 80vh;
+    }
+
     @media screen and (min-width: $mobile-breakpoint) {
+      padding-top: 0;
       height: 735px;
     }
 
@@ -23,9 +27,13 @@
     margin-inline: auto;
     display: grid;
     gap: 2rem;
+    padding-top: 8rem;
+    padding-bottom: 5rem;
 
     @media screen and (min-width: $mobile-breakpoint) {
       padding-inline: $main-padding-desktop;
+      padding-top: 0;
+      padding-bottom: 0;
     }
 
     h1 {
